<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CountDown Timer</string>
    <string name="plus">+</string>
    <string name="_00">00</string>
    <string name="minus">-</string>
    <string name="plus2">+</string>
    <string name="_001">00</string>
    <string name="minus2">-</string>
    <string name="plus3">+</string>
    <string name="_003">00</string>
    <string name="minus3">-</string>
    <string name="start">Start</string>
    <string name="cancel" tools:ignore="ButtonCase">cancel</string>
    <string name="set_count_down">Set Count Down</string>
</resources>